--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "jeongsim-workshop-mgt",
   "private": true,
@@ -11,17 +10,22 @@
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
-    "lucide-react": "^0.561.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.10.1",
-    "recharts": "^3.5.1"
+    "lucide-react": "^0.460.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-is": "^19.0.0",
+    "react-markdown": "^10.0.0",
+    "react-router-dom": "^7.1.0",
+    "recharts": "2.13.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.0"
   }
